--- a/assets/css/style/dashbaord.css
+++ b/assets/css/style/dashbaord.css
@@ -97,12 +97,14 @@
 
 .chart {
 
-    width: 100%;
+    width: 96%;
 }
 .chart-container {
     margin-top: 20px;
-    width: 100%;
-    height: 350px; /* Adjusted height */
+    width: 96%;
+    height: 350px; 
+    /* margin: 0 auto; */
+    margin-left: -20px;
 }
 
 .chart-container canvas {
