--- a/assets/css/style/inventory.css
+++ b/assets/css/style/inventory.css
@@ -27,3 +27,12 @@
         margin-bottom: 8px; /* Add spacing between image and text */
     }
 }
+
+/* //button// */
+.custom-btn {
+    background-color: #F8F9FA;
+    border: 1px solid #E0E0E0;
+}
+.custom-btn:hover {
+    background-color: #E9ECEF; /* Slightly darker shade on hover */
+}
