feature/inventory (create, edit) [POS-63]

--- a/Views/assets/css/style/product.css
+++ b/Views/assets/css/style/product.css
@@ -162,10 +162,9 @@ body {
     text-align: center;
   }
   
-  img {
-    width: 50px; /* Adjust size as necessary */
+  /* img {
     height: auto;
-  }
+  } */
   
   .td-actions {
     display: flex;
