--- a/Views/assets/css/style/inventory.css
+++ b/Views/assets/css/style/inventory.css
@@ -76,13 +76,35 @@ body {
     margin: 0 auto;
 }
 .orders{
-    padding: 20px;
+    padding: 10px;
+    margin-top: 40px;
+    margin-left: -50px;
+    margin-right: -25px;
 }
 
 .edit-inventory h3 {
     text-align: center;
     color: #333;
     font-size: 1.5rem;
+}
+.btn-new-product{
+  background: rgb(73, 73, 253);
+  padding: 10px 15px;
+  border-radius: 50px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transition: background-color 0.3s ease; /* Smooth transition */
+  text-decoration: none;
+
+}
+.btn-new-product, a{
+  color: #f1f1f1;
+  font-weight: bold;
+  font-size: 18px;
+}
+.btn-new-product:hover{
+  color: #f1f1f1;
+  background: rgb(2, 2, 221);
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 .form-label {
     font-weight: bold;
@@ -173,7 +195,7 @@ body {
 
 /* Sorting Icon */
 .table th.active::after {
-  content: '';
+  content: '\f0de';
   position: absolute;
   right: 10px;
   top: 10px;
@@ -184,14 +206,10 @@ body {
 
 /* Ascending Icon */
 .table th.asc::after {
-  content: "\f0de"; /* Font Awesome sort-up icon */
+  content: "\f0de"; 
   transform: rotate(180deg);
 }
 
-/* Descending Icon */
-.table th:not(.asc)::after {
-  content: "\f0de"; /* Font Awesome sort-down icon */
-}
 
 /* Table Rows */
 .table tbody tr {
@@ -310,7 +328,6 @@ body {
     font-weight: bold;
   
   }
-  
   /* Remove background color from the dropdown button */
   .btn-seemore{
     border: none;
@@ -322,11 +339,6 @@ body {
   .detail p{
     margin-bottom: 15px;
   }
-  
-  
-  
-  
-  
   
   @media (max-width: 768px) {
       .edit-inventory {
