--- a/Views/assets/css/settings/list.css
+++ b/Views/assets/css/settings/list.css
@@ -47,8 +47,10 @@
 .menu li:hover {
     background: #f2f2f2;
 }
+
 .custom-btn {
-    background-color: #048c24; /* Green */
+    background-color: #048c24;
+    /* Green */
     color: white;
     padding: 10px 20px;
     border-radius: 10px;
@@ -59,10 +61,13 @@
 }
 
 .custom-btn:hover {
-    background-color: #218838; /* Darker green */
+    background-color: #218838;
+    /* Darker green */
 }
+
 .custom-btnn {
-    background-color: #de8806; /* Green */
+    background-color: #de8806;
+    /* Green */
     color: white;
     padding: 10px 20px;
     border-radius: 10px;
@@ -73,17 +78,20 @@
 }
 
 .custom-btn:hover {
-    background-color: #218838; /* Darker green */
+    background-color: #218838;
+    /* Darker green */
 }
 
 .form-group {
     display: flex;
     justify-content: space-between;
-    gap: 20px; /* Adjust space between inputs */
+    gap: 20px;
+    /* Adjust space between inputs */
 }
 
 .group {
-    flex: 1; /* Makes both fields equal width */
+    flex: 1;
+    /* Makes both fields equal width */
     display: flex;
     flex-direction: row;
 }
@@ -99,4 +107,74 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+}
+
+.container {
+    margin-top: 30px;
+    width: 1000px;
+    height: 80vh;
+    .card {
+        h2 {
+            margin-top: 20px;
+            
+        }
+
+    .account-details {
+        
+        padding: 40px;
+        padding-left: 80px;
+        a {
+            margin-top: 30px;
+            display: flex;
+            width: 80px;
+            text-align: center;
+            margin-left: 750px;
+            background: rgb(171, 112, 24);
+        }
+        .account-row {
+            
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            .profile-image {
+                display: flex;
+                flex-direction: row;
+                gap: 50px;
+                margin-bottom: 10px;
+                p {
+                    margin-top: 20px;
+                }
+            }
+            .account {
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+                gap: 20px;
+                .a-1 {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 30px;
+
+            
+                    
+                    .a {
+                        
+                        border: 0.7px solid;
+                        border-radius: 10px;
+                        width: 400px;
+                        background: rgba(242, 242, 242, 0.574);
+                        display: flex;
+                        flex-direction: row;
+                        p {
+                            margin-left: 20px;
+                        }
+                    }
+                    
+
+
+                }
+            }
+        }
+    }
+    }
 }
