--- a/Views/assets/css/settings/list.css
+++ b/Views/assets/css/settings/list.css
@@ -112,8 +112,10 @@
 .container {
     margin-top: 30px;
     width: 1000px;
+    
     height: 80vh;
     .card {
+        width: 1000px;
         h2 {
             margin-top: 20px;
             
