refactor(update admin): Update form and data in edit form setting[#14]

--- a/Views/assets/css/settings/nav.css
+++ b/Views/assets/css/settings/nav.css
@@ -1,6 +1,7 @@
 .navbar {
     display: flex;
     flex-direction: row;
+    width: 1200px;
     .search-container {
         width: 700px;
         margin-left: 30px;
