--- a/Views/assets/css/settings/edit.css
+++ b/Views/assets/css/settings/edit.css
@@ -11,6 +11,16 @@
         align-items: flex-start;
         margin-top: 15px;
     }
+    .group-1 {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 15px;
+        width: 20px;
+        input {
+            width: 820px;
+        }
+    }
 
     .form-label {
         font-weight: bold;
@@ -48,3 +58,14 @@
     .form-controls {
         width: 900px;
     }
+
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+.card {
+    display: flex;
+    width: 1000px;
+}
