--- a/Views/assets/css/settings/list.css
+++ b/Views/assets/css/settings/list.css
@@ -1,105 +1,65 @@
 nav {
-    background: pink;
-}
-.profile {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    position: relative;
-    cursor: pointer;
-    padding: 10px;
-    border-radius: 8px;
-    background: #fff;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.profile img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-}
-
-.profile-info {
-    display: flex;
-    flex-direction: column;
-}
-
-.menu {
-    display: none;
-    position: absolute;
-    top: 50px;
-    right: 0;
-    background: #fff;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    padding: 10px;
-    list-style: none;
-    min-width: 120px;
-}
-
-.menu li {
-    padding: 10px;
-}
-
-.menu li a {
-    text-decoration: none;
-    color: black;
-    display: block;
-}
-
-.menu li:hover {
-    background: #f2f2f2;
-}
-.custom-btn {
-    background-color: #048c24; /* Green */
-    color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-    text-decoration: none;
-    display: inline-block;
-    font-weight: bold;
-    transition: background 0.3s;
-}
-
-.custom-btn:hover {
-    background-color: #218838; /* Darker green */
-}
-.custom-btnn {
-    background-color: #de8806; /* Green */
-    color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-    text-decoration: none;
-    display: inline-block;
-    font-weight: bold;
-    transition: background 0.3s;
-}
-
-.custom-btn:hover {
-    background-color: #218838; /* Darker green */
-}
-
-.form-group {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px; /* Adjust space between inputs */
-}
-
-.group {
-    flex: 1; /* Makes both fields equal width */
+    background: white;
+    border-radius: 0px 0px 0px 10px;
+    height: 13vh;
+    margin-right: 0px;
+    margin-left: 20px;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    .search-container {
+        width: 60%;
+    }
+    .icons {
+        margin-right: 100px;
+    }
+    .profile {
+        margin-right: 100px;
+        img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin: 10px;
+        }
+        .profile-info {
+            display: flex;
+            flex-direction: column;
+            #profile-name {
+                font-size: 16px;
+                font-weight: bold;
+                color: rgb(88, 85, 85);
+            }
+        }
+        .menu {
+            display: none;
+            position: absolute;
+            top: 80px;
+            right: 50px;
+            background: #fff;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+            padding: 10px;
+            list-style: none;
+            min-width: 140px;
+            li {
+                padding: 10px;
+                a {
+                    text-decoration: none;
+                    color: black;
+                    display: block;
+                }
+            }
+            li:hover {
+                background: #f2f2f2;
+            }
+        }
+    }
+
 }
 
-.form-label {
-    font-weight: bold;
-    margin-bottom: 5px;
-}
 
-.form-control {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-}
+
+
+
+
+
